--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --inspect --watch-path=./ ./server.js"
+    "start": "node --inspect --watch-path=./ ./server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "Himanshu",
@@ -24,5 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
